--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -3,7 +3,7 @@ WORKDIR /app
 
 COPY api/requirements.txt api/src/index.py api/.flaskenv ./
 RUN pip install -r ./requirements.txt
-ENV FLASK_ENV production
+ENV FLASK_DEBUG production
 
 EXPOSE 5001
 CMD ["gunicorn", "-b", ":5001", "index:app"]
