--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile.api
     image: api
-    depends_on:
-      - db
+    ports:
+     - "5001:5001"
 
   client:
     build:
