--- a/package.json
+++ b/package.json
@@ -17,25 +17,11 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "create-env": "cd api && python -m venv venv && venv/Scripts/activate && pip install -r requirements.txt",
-    "create-env-mac": "cd api && python3 -m venv venv && source venv/bin/activate && pip install -r requirements.txt",
-    "start-api": "cd api && venv/Scripts/flask run --port=5001 --no-debugger",
-    "start-api-mac": "cd api && venv/bin/flask run --port=5001 --no-debugger",
-    "start-client": "react-scripts start",
-    "start-client-mac": "DANGEROUSLY_DISABLE_HOST_CHECK=true react-scripts start",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "create-env": "cd api && python3 -m venv venv && source venv/bin/activate && pip install -r requirements.txt",
+    "start-api": "cd api && venv/bin/flask run --port=5001 --no-debugger",
+    "start-client": "DANGEROUSLY_DISABLE_HOST_CHECK=true react-scripts start",
     "build": "react-scripts build",
-    "test-client": "jest --coverage",
-    "test-api":"cd api && cd venv/scripts && pytest ../../tests",
-    "test-api-mac":"cd api && cd venv/bin && pytest ../../tests",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -52,12 +38,6 @@
   "proxy":"http://127.0.0.1:5001",
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@jest/globals": "^29.4.3",
-    "babel-jest": "^29.4.3",
-    "eslint": "^8.34.0",
-    "jest": "^29.4.3",
-    "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.5"
+    "@babel/preset-react": "^7.18.6"
   }
 }
