--- a/.github/worfklows/main.yml
+++ b/.github/worfklows/main.yml
@@ -15,7 +15,7 @@ jobs:
         args: --acl public-read --follow-symlinks --delete
       env:
         NODE_ENV: development # optional: defaults to production
-        AWS_S3_BUCKET: arn:aws:s3:::envergo-front-test
+        AWS_S3_BUCKET: envergo-front-test
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: eu-west-3
