--- a/.github/workflows/react-s3.yml
+++ b/.github/workflows/react-s3.yml
@@ -12,16 +12,12 @@ jobs:
       run:
         working-directory: ./app
     
-    strategy:
-      matrix:
-        node-version: [18.x]
-        
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
     - name: Yarn Install
       run: |
         yarn install
