--- a/.github/workflows/react-s3.yml
+++ b/.github/workflows/react-s3.yml
@@ -31,4 +31,4 @@ jobs:
           aws-region: eu-west-3
 
       - name: Deploy to S3 bucket
-        run: aws s3 sync ./dist/ s3://envergo-front-test --delete
+        run: aws s3 sync ./build/ s3://envergo-front-test --delete
