--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,12 +1,15 @@
 FROM python:3.11.2-alpine3.17
 
+ENV PYTHONPATH "${PYTHONPATH}:/code/app"
+
 WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 
+RUN pip install --upgrade pip
+
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./api /code/app
+COPY . /code/app
 
-EXPOSE 80
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
